cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(TULIP3 REQUIRED)
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

INCLUDE_DIRECTORIES(${TULIP_INCLUDE_DIR} ${QT_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})	

set(PLUGIN_NAME "Reg-pTV-${TULIP_PLUGIN_VERSION}")

set(CMAKE_CXX_FLAGS "-Wall")
set(CMAKE_C_FLAGS "-Wall")

ADD_LIBRARY(${PLUGIN_NAME} SHARED Reg-pTV.cpp)
TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ${TULIP_LIBRARY})

INSTALL(TARGETS ${PLUGIN_NAME} LIBRARY DESTINATION ${TULIP_PLUGINS_PATH})
