CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Tulip-plugin-reg-ptv)

FIND_PACKAGE(TULIP REQUIRED)
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

INCLUDE_DIRECTORIES(${TULIP_INCLUDE_DIR} ${QT_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR})

set(PLUGIN_NAME "Reg-pTV-${TULIP_VERSION}")

ADD_LIBRARY(${PLUGIN_NAME} SHARED Reg-pTV.cpp)
TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ${TULIP_LIBRARIES} ${QT_LIBRARIES})

INSTALL(TARGETS ${PLUGIN_NAME} LIBRARY DESTINATION ${TULIP_PLUGINS_DIR})


set(PLUGIN_NAME "Reg-pTV-vector-${TULIP_VERSION}")

ADD_LIBRARY(${PLUGIN_NAME} SHARED Reg-pTV-Vector.cpp)
TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ${TULIP_LIBRARIES} ${QT_LIBRARIES})

INSTALL(TARGETS ${PLUGIN_NAME} LIBRARY DESTINATION ${TULIP_PLUGINS_DIR})
